--- a/site/2023-05-16-代码随想录-Day16.html
+++ b/site/2023-05-16-代码随想录-Day16.html
@@ -782,10 +782,12 @@ public:
     }
 };
 </code></pre>
-<p><a href="https://leetcode.cn/problems/path-sum/">112. Path Sum</a>
-- 如果需要搜索整棵二叉树且不用处理递归返回值，递归函数就不要返回值。（这种情况就是本文下半部分介绍的113.路径总和ii）
-- 如果需要搜索整棵二叉树且需要处理递归返回值，递归函数就需要返回值。 （这种情况我们在236. 二叉树的最近公共祖先 (opens new window)中介绍）
-- 如果要搜索其中一条符合条件的路径，那么递归一定需要返回值，因为遇到符合条件的路径了就要及时返回。</p>
+<p><a href="https://leetcode.cn/problems/path-sum/">112. Path Sum</a></p>
+<ul>
+<li>如果需要搜索整棵二叉树且不用处理递归返回值，递归函数就不要返回值。（这种情况就是本文下半部分介绍的113.路径总和ii）</li>
+<li>如果需要搜索整棵二叉树且需要处理递归返回值，递归函数就需要返回值。 （这种情况我们在236. 二叉树的最近公共祖先 (opens new window)中介绍）</li>
+<li>如果要搜索其中一条符合条件的路径，那么递归一定需要返回值，因为遇到符合条件的路径了就要及时返回。</li>
+</ul>
 
 
 
