--- a/site/训练营-Day2.html
+++ b/site/训练营-Day2.html
@@ -849,46 +849,83 @@
 
   <h1>Day 2</h1>
 
-<p><a href="https://leetcode.cn/problems/binary-search/">704. 二分查找</a></p>
-<p>题目：给你一个升序数组nums和一个目标值target，返回目标值target在数组nums中的下标，如果不存在则返回-1</p>
-<p>思路：二分查找</p>
+<p><a href="https://leetcode.cn/problems/squares-of-a-sorted-array/">977.有序数组的平方</a></p>
+<p>题目： 给你一个递增数组nums（包含负数），返回一个数组，且数组要求里面的元素是给定数组nums里面元素的平方，还要求递增</p>
 <pre><code class="language-cpp">class Solution {
 public:
-    int search(vector&lt;int&gt;&amp; nums, int target) {
+    vector&lt;int&gt; sortedSquares(vector&lt;int&gt;&amp; nums) {
+        vector&lt;int&gt;res(nums.size());
         int l = 0;
-        int r = nums.size(
+        int r = nums.size() - 1;
+        int idx = r;
         while (l &lt;= r) {
-            int mid = l + (r - l) / 2;
-            if (nums[mid] &lt; target) {
-                l = mid + 1;
-            } else if (nums[mid] &gt; target) {
-                r = mid - 1;
+            // 每次比较两端的值，因为最大值只会在两端出现
+            if (abs(nums[l]) &gt; abs(nums[r])) {
+                // 放进结果数组的末尾
+                res[idx] = (nums[l] * nums[l]);
+                l++;
             } else {
-                return mid;
+                res[idx] = (nums[r] * nums[r]);
+                r--;
             }
+            idx--;
         }
-        return -1;
+        return res;
     }
 };
 </code></pre>
-<p><a href="https://leetcode.cn/problems/remove-element/">27. 移除元素</a></p>
-<p>题目：给你一个数组nums和一个值val，要求你把数组中值为val的元素全部删掉，而且不允许你使用额外的数组来辅助解决这题，返回移除val后数组的长度</p>
-<p>思路：快慢指针，快指针遍历数组，慢指针遍历当前不重复的下标。不重复的数一定小于等于原数组，所以不会写到快指针
-还没有遍历的数</p>
+<p><a href="https://leetcode.cn/problems/minimum-size-subarray-sum/submissions/">209.长度最小的子数组</a></p>
+<p>题目：给你一个数组和target，求出一个连续子数组，并且这个子数组相加要大于target，返回子数组最短的长度</p>
+<p>思路：滑动窗口</p>
 <pre><code class="language-cpp">class Solution {
 public:
-    int removeElement(vector&lt;int&gt;&amp; nums, int val) {
-        int i = 0;
-        int curr = 0;
-        int cnt = 0;
-        for (int i = 0; i &lt; nums.size(); i++) {
-            if (nums[i] != val) {
-                nums[curr] = nums[i];
-                curr++;
-                cnt++;
+    int minSubArrayLen(int target, vector&lt;int&gt;&amp; nums) {
+        int res = INT_MAX;
+        int l = 0;
+        int r = 0;
+        int sum = 0;
+        while (r &lt; nums.size()) {
+            sum += nums[r];
+            r++;
+            while (sum - nums[l] &gt;= target) {
+                sum -= nums[l];
+                l++;
+            }
+            if (sum &gt;= target) {
+                res = min(res, r - l);
             }
         }
-        return cnt;
+        return res == INT_MAX ? 0 : res;
+    }
+};
+</code></pre>
+<p><a href="https://leetcode.cn/problems/spiral-matrix-ii/">59. 螺旋矩阵II</a></p>
+<p>题目： 给你一个n，生成NxN的矩阵，并且要求你顺时针填入1，2，3，4，5...</p>
+<pre><code class="language-cpp">class Solution {
+public:
+    vector&lt;vector&lt;int&gt;&gt; generateMatrix(int n) {
+        vector&lt;vector&lt;int&gt;&gt;dir = {{0, 1}, {1, 0}, {0, -1}, {-1, 0}};
+        vector&lt;vector&lt;int&gt;&gt;res(n, vector&lt;int&gt;(n));
+        vector&lt;vector&lt;bool&gt;&gt;visited(n, vector&lt;bool&gt;(n, false));
+        int num = 1;
+        int x = 0;
+        int y = 0;
+        int idx = 0;
+        while (num &lt;= n * n) {
+            res[x][y] = num;
+            visited[x][y] = true;
+            int xi = x + dir[idx][0];
+            int yi = y + dir[idx][1];
+            if (!(xi &gt;= 0 &amp;&amp; xi &lt; n &amp;&amp; yi &gt;= 0 &amp;&amp; yi &lt; n) || visited[xi][yi]) {
+                idx =  (idx + 1) % 4;
+                xi = x + dir[idx][0];
+                yi = y + dir[idx][1];
+            }
+            x = xi;
+            y = yi;
+            num++;
+        }
+        return res;
     }
 };
 </code></pre>
