--- a/site/代码随想录-Day24.html
+++ b/site/代码随想录-Day24.html
@@ -934,7 +934,7 @@
   <h1>Day 24 回溯</h1>
 
 <p><a href="https://leetcode.cn/problems/restore-ip-addresses/">93. Restore IP Addresses</a></p>
-<p>题目：Given a string s containing only digits, return all possible valid IP addresses that can be formed by inserting dots into s. You are not allowed to reorder or remove any digits in s. You may return the valid IP addresses in any order.</p>
+<p>题目：Given a string s containing only digits, return all possible valid IP addresses that can be formed by inserting dots into s. <br>You are not allowed to reorder or remove any digits in s. You may return the valid IP addresses in any order.</p>
 <pre><code class="language-cpp">class Solution {
 public:
     vector&lt;string&gt;res;
